# claude-project-best-practices

./: README.md  claude-code-guide.md  claude-code-quick-ref.md  implementation-checklist.md
core/.claude/: settings.json
core/.claude/commands/: help.md
core/.claude/hooks/: pre-tool-use-safety.py  project-boundary.py  prompt-safety-check.py
core/scripts/: bootstrap.py
domains/python/: .env.example  manifest.json  pyproject.toml
domains/python/.claude/commands/: setup-python.md  test.md
domains/python/src/: __init__.py
domains/python/tests/: conftest.py  test_example.py
